<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="12dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/rounded_corners">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_tags" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/item_description" />

        <TextView
            android:id="@+id/tvDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_due_date" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbCompleted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:buttonTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageButton
        android:id="@+id/btnDeleteTodo"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:padding="8dp"
        android:src="@drawable/ic_delete_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEditTodo"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:tint="#FF0000" />

    <ImageButton
        android:id="@+id/btnEditTodo"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit"
        android:padding="8dp"
        android:src="@drawable/ic_edit_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbCompleted"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:tint="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>